--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_sources(
   Main.cpp
   TestApp.cpp
-  DeviceCandidate.cpp
 )
 
 add_subdirectory(utility)
 add_subdirectory(logging)
+add_subdirectory(engine)
