Started working on shaders. Added them to cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,9 @@ macro(add_sources)
 	file (RELATIVE_PATH _relPath "${CMAKE_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
 
 	foreach(_src ${ARGN})
-
-		if(_relPath)
+		if (${_relPath} MATCHES "/shaders$")
+			set_property(TARGET shaders APPEND PROPERTY SHADER_SRC_LIST "${_relPath}/${_src}")
+		elseif(_relPath)
 			set_property(TARGET test-vulkan APPEND PROPERTY SRC_LIST "${_relPath}/${_src}")
 		else()
 			set_property(TARGET test-vulkan APPEND PROPERTY SRC_LIST "${_src}")
@@ -26,17 +27,25 @@ elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 	set(LINK_FLAGS "/NODEFAULTLIB:msvcrtd.lib")
 endif()
 
-
 #set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILE_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LINK_FLAGS}")
 
 add_executable(test-vulkan "")
+add_custom_target(shaders)
+add_dependencies(test-vulkan shaders)
 
 add_subdirectory(src)
 
 get_property(SRCS TARGET test-vulkan PROPERTY SRC_LIST)
 target_sources(test-vulkan PRIVATE ${SRCS})
+
+get_property(SHADER_SRCS TARGET shaders PROPERTY SHADER_SRC_LIST)
+
+foreach(_shader ${SHADER_SRCS})
+	string(REGEX MATCH "[a-z]+$" _filename ${_shader})
+	add_custom_command(TARGET shaders POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND glslangValidator -V ${_shader} -o "${CMAKE_BINARY_DIR}/${_filename}.spv")
+endforeach()
 
 include_directories(src)
 
